<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:id="@+id/rl1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linearlayout1"
                android:layout_width="match_parent"
                android:layout_height="30dp">

                <fragment
                    android:id="@+id/place_autocomplete"
                    android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
                    android:layout_width="match_parent"
                    android:layout_height="30dp" />
            </LinearLayout>

            <Button
                android:id="@+id/view1"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:background="@null"
                android:clickable="true" />

            <LinearLayout
                android:id="@+id/linearlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearlayout1"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnHospitals"
                    style="@style/Widget.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btnhospitals"
                    android:textColor="@color/colorPrimary" />

                <Button
                    android:id="@+id/btnRestarents"
                    style="@style/Widget.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btnRestarents"
                    android:textColor="@color/colorPrimary" />

                <Button
                    android:id="@+id/btnSchools"
                    style="@style/Widget.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btnSchools"
                    android:textColor="@color/colorPrimary" />

            </LinearLayout>

            <fragment
                android:id="@+id/mapFragment"
                class="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/linearlayout" />

            <LinearLayout
                android:id="@+id/infoLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@color/colorWhite"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tvMoreInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_margin="5dp"
                    android:layout_toStartOf="@+id/btndirections"
                    android:background="@color/colorPrimary"
                    android:clickable="true"
                    android:drawableLeft="@drawable/ic_more_info"
                    android:gravity="center"
                    android:padding="5dp"
                    android:textColor="@color/colorWhite"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/tvTotalDuration"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_margin="5dp"
                    android:layout_toStartOf="@+id/btndirections"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/tvTotalDuration"
                    android:textColor="@color/colorWhite"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tvTotalDistance"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_margin="5dp"
                    android:layout_toStartOf="@+id/btndirections"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/tvTotalDistance"
                    android:textColor="@color/colorWhite"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/btndirections"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:background="@color/colorPrimary"
                    android:padding="5dp"
                    android:text="@string/btnDirections"
                    android:textColor="@color/colorWhite"
                    android:visibility="invisible" />
            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>